@startuml
'!theme black-knight
skinparam classFontSize 30
package "clusterAnalysis" {
    skinparam FontSize 5
    json JSON {
    "data": [{"answer":{"q1":{"a5":{"x":true},"a2":{"x":false},"a1":{"x":false},"a3":{"x":false},"a4":{"x":false},"a6":{"x":false}},"q2":{"a4":{"x":true},"a1":{"x":false},"a2":{"x":false},"a3":{"x":false}},"q3":{"t":"Just not Interested"},"q9":{"b2":{"a1":{"x":false},"a2":{"x":true}},"b1":{"a1":{"x":false},"a2":{"x":true}}},"q10":{"b5":{"a3":{"x":true}},"b1":{"a3":{"x":true}},"b7":{"a3":{"x":true}},"b2":{"a4":{"x":true}},"b6":{"a3":{"x":true}},"b3":{"a3":{"x":true}},"b4":{"a3":{"x":true}}},"q11":{"a4":{"x":true},"a2":{"x":false},"a1":{"x":false},"a3":{"x":false}},"q12":{"a1":{"x":true},"a2":{"x":false}},"q15":{"a4":{"x":true},"a1":{"x":false},"a2":{"x":false},"a3":{"x":false}},"q16":{"a1":{"x":true},"a2":{"x":false}}}}, "answer", "answer"]
    }
    together {
        class RowDataFromURL{
            {field}-data: dict
            {method}-__init__(url: str = "aytm.com")
        }
        'Зависит от ..>
        RowDataFromURL::__init__ ..> JSON

        class RowDataFromFile{
            {field}-data: dict
            {method}-__init__(file_name: str = "601285.json")
        }
        'Зависит от ..>
        RowDataFromFile::__init__ ..> JSON

        class ClearedData{
            {field}-cleared_data: DataFrame
            {method}-__init__(row_data_json: dict)
        }
        'Зависит от ..>
        ClearedData::__init__ ..> RowDataFromFile
        ClearedData::__init__ ..> RowDataFromURL

        class DistanceMatrix{
            {field}-distanceMatrix: ndarray (n:n)
            {method}-__init__(clearedData: ClearedData)
        }
        'Зависит от ..>
        DistanceMatrix::__init__ ..> ClearedData

        class Clusters {
            {field}-clusterLabels: ndarray (n)
            {method}-__init__(distance_matrix: DistanceMatrix)
            {method}~get_cluster_labels() -> ndarray
        }
        'Зависит от ..>
        Clusters::__init__  ..> DistanceMatrix
    }
    'JSON -[hidden]-> Clusters
    JSON -[hidden]-> DistanceMatrix
    JSON -[hidden]-> ClearedData
    JSON -[hidden]-> RowDataFromURL
    JSON -[hidden]-> RowDataFromFile


}
@enduml